--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,43 @@
 /* TODO Add site wide styles */
+#root{
+    margin: 0;
+    height: 100%;
+    width: 100%;
+}
+
+/* navlink compnents */
+
+
+.navlink-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.navlink{
+    display: flex;
+    flex-direction: row;
+    height: 25%;
+    width: 25%;
+    margin: 5px 5px;
+}
+
+.navlink__items{
+    display: flex;
+    flex-direction: row;
+}
+
+.navlink__text-container{
+    display: flex;
+    align-content: center;
+}
+
+.navlink__icon{
+    height: 75%;
+    width: 75%;
+}
+
+ img {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+ }
