--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
 /* TODO Add site wide styles */
+body{
+
+}
 #root{
+    background-color:#343a40;
     margin: 0;
-    height: 100%;
+    height: 100vh;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+/* splits left and right side */
+.page-body{
+    display: flex;
+    height: 94vh;
 }
 
 /* navlink compnents */
+a{
+    text-decoration: none;
+}
 
-
+.side-pannel{
+    overflow: auto;
+    height: 100%;
+    width: 35%;
+}
 .navlink-container{
     display: flex;
     flex-direction: column;
@@ -28,12 +47,12 @@
 
 .navlink__text-container{
     display: flex;
-    align-content: center;
+    align-items: center;
 }
 
 .navlink__icon{
-    height: 75%;
-    width: 75%;
+    height: 36px;
+    width: 36px;
 }
 
  img {
@@ -41,3 +60,14 @@
     max-height: 100%;
     display: block;
  }
+
+ /* playlist sidebar styling */
+.playlist-container{
+    margin: 10px 10px;
+}
+
+.right-body{
+    height: 100%;
+    overflow: auto;
+    width: 100%;
+}
