--- a/src/components/playlist-bar/playListDetail.css
+++ b/src/components/playlist-bar/playListDetail.css
@@ -5,3 +5,21 @@
 .playlist__container{
     overflow: hidden;
 }
+
+.playlist__link{
+    display: block;
+    color: white;
+}
+
+.playlist__link:hover{
+    color: white;
+}
+.playlist-link__container{
+    margin: 8px 0px;
+    width: 100%;
+}
+.playlist-link__container:hover{
+    /* border: 1px solid black; */
+    box-shadow: 0px 0px 2px 1px rgba(255, 0, 255, .2);;
+
+}
