finished add to queue and add to playlist features

--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,14 @@ a:hover{
     display: flex;
     justify-content: space-around;
 }
+
+.playlist__add-button{
+    margin: 0px;
+    display: flex;
+    justify-content: space-between;
+    height: 30px;
+}
+
+.playlist-bar__title{
+    color:white;
+}
