--- a/src/components/playlist-bar/playListDetail.css
+++ b/src/components/playlist-bar/playListDetail.css
@@ -23,3 +23,12 @@
     box-shadow: 0px 0px 2px 1px rgba(255, 0, 255, .2);;
 
 }
+
+.empty-playlist-container{
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 50px;
+}
