added more styling to login page

--- a/src/components/playlist-bar/PlayListHeader.css
+++ b/src/components/playlist-bar/PlayListHeader.css
@@ -23,4 +23,9 @@
 .playlist-header__left{
     width: 300px;
     height: 300px;
+    margin-right: 10px;
+}
+
+.artist-page-header__picture{
+    width: 350px;
 }
