--- a/src/components/loginPage/loginPage.css
+++ b/src/components/loginPage/loginPage.css
@@ -1,6 +1,5 @@
 .login-page{
     background-color: white;
-    height: 100%;
 }
 
 .logos__picture{
@@ -26,13 +25,17 @@
 
 .login__info{
     margin: 5px 0px;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .login__button{
     display: flex;
     justify-content: center;
-    margin: 5px 0px;
+    margin: 20px 0px;
 }
 
 .login-page__content{
@@ -40,6 +43,24 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: black;
+    background-color: #343a40;
     color: white;
+}
+
+.login__warning{
+    color: red;
+}
+
+.login__exp{
+    max-width: 1100px;
+    margin: 10px 0px;
+}
+
+.login__img-container{
+    align-self: center;
+}
+
+.navbar-login{
+    display: flex;
+    justify-content: space-between;
 }
